--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,6 +1,6 @@
 
 .container{
-    height: 100vh;
+    height: 90vh;
     padding-top: 20vh;
 }
 
