--- a/src/styles.css
+++ b/src/styles.css
@@ -1,31 +1,7 @@
+@import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
+
 body{
     background-color:rgb(233, 233, 233);
-}
-
-.container-fluid, nav{
-    background-color: whitesmoke;
-    box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.75);
-    -webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.75);
-}
-
-nav{
-    background-color: #9dc9cb;
-    box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
-    -webkit-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
-}
-
-.footer-container{
-    background-color: rgb(29, 29, 29);
-    color:whitesmoke;
-    box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.75);
-    -webkit-box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.75);
-}
-
-nav{
-    background-color: white;
 }
 
 .content-container{
